Fixed paragraph and list item alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,16 +38,17 @@
 
 #button:hover {
     cursor: pointer;
-    opacity: .8;
+    opacity: .7;
 }
 
 p {
     width: 80%;
     box-sizing: border-box;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
     font-size: 0.8em;
 }
+
 
 .strike {
     text-decoration: line-through;
@@ -65,6 +66,7 @@ p {
     background-color: lightcoral;
     padding: 10px;
     border-radius: 5px;
+    text-align: left;
 }
 
 span {
